fixing alignment of update form inputs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -341,7 +341,7 @@ main p {
 	font-size: 1em;
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
+	justify-content: space-around;
 	margin: 0.6em 1em 0em 4em;
 	align-self: center;
 	line-height: 3em;
@@ -377,18 +377,9 @@ main p {
 }
 
 #update-task button:hover {
-	border: .2em solid #FFFFFF;
-    background-color: rgba(255, 255, 255, 0.75);
-    color: rgb(47, 47, 47);
-    font-family: ApexMedium;
-    padding: 10px;
-    width: 40%;
-    border-radius: 3px;
-    margin: 5px;
-    display: flex;
-    justify-content: center;
-    flex: 1 1 fit-content;
-    align-self: center;
+	background-color: white;
+	color: rgba(40,40,40,0.8);
+	border: .2em solid #4DDEB3;
 }
 /*.caption-container {
 	background-color: rgba(10,10,10,0.5);
